--- a/final-project/kpop.html
+++ b/final-project/kpop.html
@@ -28,9 +28,9 @@
               <span class="hour">3 hrs/week</span>
             </div>
 
-            <div class="name">
+            <h1 class="name">
               <b>KBM Dance</b>
-            </div>
+            </h1>
             <div class="description">
               KBM Dance, officially launched in September 2016, is a UCLA-based K-pop cover dance team under KINSA (K-pop International Student Association) who wish to bond, spread happiness and our love for K-pop through our dance covers on YouTube.
             </div>
