--- a/final-project/kpop.html
+++ b/final-project/kpop.html
@@ -49,9 +49,9 @@
               <span class="hour">5 hrs/week</span>
             </div>
   
-            <div class="name">
+            <h1 class="name">
               <b>SEOULA</b>
-            </div>
+            </h1>
             <div class="description">
               SEOULA is a K-POP/original choreography dance team, started in January of 2017, with a diverse group of dancers who all share a passion for Korean pop culture. We hope to showcase their talents and skills through different performances in and out of UCLA to spread the love of dance and the Korean culture to the world! 
             </div>
@@ -72,9 +72,9 @@
               <span class="hour">5 hrs/week</span>
             </div>
   
-            <div class="name">
+            <h1 class="name">
               <b>KOREOS</b>
-            </div>
+            </h1>
             <div class="description">
               Beginning production in December 2014, Koreos is a UCLA-based K-Pop dance cover team made up of members who each bring their own diverse and unique flavors. Koreos values teamwork, growth, and professionalism to create dance covers, participate in competitions, and connect with the broader K-Pop community.
             </div>
@@ -93,9 +93,9 @@
               <span class="hour">5 hrs/week</span>
             </div>
   
-            <div class="name">
+            <h1 class="name">
               <b>PLAYGROUND</b>
-            </div>
+            </h1>
             <div class="description">
               We're just here to have fun! PLAYGROUND is a space where friends come together to have fun and share their love for dance. We have an emphasis for PLAYGROUND to be stress-free and a place for happiness where creativity can be sparked. Let's all have fun at PLAYGROUND! 
             </div>
